[Backend] fix infinite recursion and permission